[package]
name = "env_struct"
description = "A better and simpler way to handle env."
version = "0.1.4"
edition = "2021"
author = "Swarnim Arun <mail@swarnimarun.com>"
license = "MIT"
documentation = "https://docs.rs/env_struct"
homepage = "https://github.com/swarnimarun/env_struct"
repository = "https://github.com/swarnimarun/env_struct"
keywords = ["env", "environment", "configuration"]
categories = ["config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.19", optional = true }

[features]
logging = ["log"]
